kubernetes/apps/production/arr/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: radarr
    namespace: arr
    labels:
        app: radarr
spec:
    replicas: 1
    selector:
        matchLabels:
            app: radarr
    template:
        metadata:
            labels:
                app: radarr
        spec:
            securityContext:
                runAsUser: 65534
                runAsGroup: 65534
                fsGroup: 65534
                fsGroupChangePolicy: OnRootMismatch
            containers:
                - name: radarr
                  image: ghcr.io/onedr0p/radarr:rolling@sha256:f63ab1d9875d81f1b6d7cd69427749451d2fab981e39ffb8d9071c2e21041170
                  imagePullPolicy: IfNotPresent
                  resources:
                    requests:
                        memory: 512Mi
                        cpu: 100m
                    limits:
                        memory: 2Gi
                        cpu: 500m
                  volumeMounts:
                    - mountPath: /config
                      name: radarr-config
                    - mountPath: /data
                      name: nas
            volumes:
                - name: nas
                  nfs:
                    path: /mnt/thePool/thePoolShare
                    server: 10.0.0.10
                - name: radarr-config
                  persistentVolumeClaim:
                    claimName: radarr-config
