kubernetes/apps/production/arr/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-radarr
  namespace: arr
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
  type: ClusterIP
