kubernetes/apps/production/arr/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: arr
spec:
  ingressClassName: nginx
  rules:
    - host: "radarr.local.mafyuh.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headless-radarr
                port:
                  number: 7878
  tls:
    - hosts:
        - "radarr.local.mafyuh.com"
      secretName: local-mafyuh-com-production-tls
